@@ -156,7 +156,11 @@ class ChangeReader:
             # Attempt to catch the case where something is inserted just before
             # the start of a section.
             match_start = self._match_lines[0].strip()[:2]
-            repl_start = self._lines[self._pos + 1].strip()[:2]
+            for repl_index in range(self._pos + 1, len(self._lines)):
+                repl_start = self._lines[repl_index].strip()[:2]
+                # CWEB @<comments@> are ignored; see ctwill-w2c.ch
+                if repl_start != "@q":
+                    break
             if match_start == "@ ":
                 if repl_start in ["@ ", "@*"]:
                     section += 1
